@@ -1,3 +1,9 @@
+Mon Feb 12 18:06:42 GMT 2007  Colin Watson  <cjwatson@debian.org>
+
+	* src/Makefile.in (LFLAGS), zsoelim/Makefile.in (LFLAGS),
+	  zsoelim/zsoelim.l: Set options using %option rather than using
+	  command-line options.
+
 Mon Feb 12 17:52:11 GMT 2007  Colin Watson  <cjwatson@debian.org>
 
 	* po/ca.po, po/cs.po, po/da.po, po/de.po, po/es.po, po/fi.po,
